--- a/pia-deluge-vpncheckkillswitch.yaml
+++ b/pia-deluge-vpncheckkillswitch.yaml
@@ -39,8 +39,10 @@ spec:
     ports: 
       - containerPort: 8112
     volumeMounts:
-      - mountPath: /mnt
-        name: big-drive
+      - mountPath: /config
+        name: deluge
+      - mountPath: /downloads
+        name: downloads
   - name: flash-healthcheck
     image: seanrclayton/flask
     ports:
@@ -61,6 +63,14 @@ spec:
       secretRef:
         name: "cifs-secret"
       options:
-        mountOptions: "dir_mode=0755,file_mode=0644"
-        networkPath: "//192.168.0.3/public"
-    name: big-drive
+        mountOptions: "dir_mode=0755,file_mode=0777,noperm"
+        networkPath: "//192.168.0.3/deluge"
+    name: deluge
+  - flexVolume:
+      driver: "fstab/cifs"
+      secretRef:
+        name: "cifs-secret"
+      options:
+        mountOptions: "dir_mode=0755,file_mode=0777,noperm"
+        networkPath: "//192.168.0.3/Downloads"
+    name: downloads
